--- a/docs/books/de_caelesti_hierarchia/01-02.mdx
+++ b/docs/books/de_caelesti_hierarchia/01-02.mdx
@@ -1,9 +1,7 @@
 ---
-title: CH 1,2
+title: CH 01, 02
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/de_caelesti_hierarchia/translated_chapter_1_section_2.md.json'
-
-
 
 <Book data={Content}/>
