--- a/docs/books/de_caelesti_hierarchia/02-01.mdx
+++ b/docs/books/de_caelesti_hierarchia/02-01.mdx
@@ -1,9 +1,7 @@
 ---
-title: CH 2,1
+title: CH 02, 01
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/de_caelesti_hierarchia/translated_chapter_2_section_1.md.json'
-
-
 
 <Book data={Content}/>
