--- a/docs/books/de_caelesti_hierarchia/02-04.mdx
+++ b/docs/books/de_caelesti_hierarchia/02-04.mdx
@@ -1,9 +1,7 @@
 ---
-title: CH 2,4
+title: CH 02, 04
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/de_caelesti_hierarchia/translated_chapter_2_section_4.md.json'
-
-
 
 <Book data={Content}/>
