--- a/docs/books/de_caelesti_hierarchia/02-05.mdx
+++ b/docs/books/de_caelesti_hierarchia/02-05.mdx
@@ -1,9 +1,7 @@
 ---
-title: CH 2,5
+title: CH 02, 05
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/de_caelesti_hierarchia/translated_chapter_2_section_5.md.json'
-
-
 
 <Book data={Content}/>
