Remove outdated chapters from "In Epistulam ad Romanos" and update titles for consistency

--- a/docs/books/in_epistulam_ad_romanos/12-07.mdx
+++ b/docs/books/in_epistulam_ad_romanos/12-07.mdx
@@ -1,5 +1,5 @@
 ---
-title: in_epistulam_ad_romanos 12, 07
+title: In espitulam ad Romanos 12, 07
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/in_epistulam_ad_romanos/translated_chapter_12_section_7.md.json'
