--- a/docs/books/in_epistulam_ad_romanos/11-53.mdx
+++ b/docs/books/in_epistulam_ad_romanos/11-53.mdx
@@ -1,5 +1,5 @@
 ---
-title: in_epistulam_ad_romanos 11, 53
+title: In espitulam ad Romanos 11, 53
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/in_epistulam_ad_romanos/translated_chapter_11_section_53.md.json'
