--- a/docs/books/in_epistulam_ad_romanos/12-02.mdx
+++ b/docs/books/in_epistulam_ad_romanos/12-02.mdx
@@ -1,5 +1,5 @@
 ---
-title: in_epistulam_ad_romanos 12, 02
+title: In espitulam ad Romanos 12, 02
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/in_epistulam_ad_romanos/translated_chapter_12_section_2.md.json'
