--- a/docs/books/in_epistulam_ad_romanos/13-05.mdx
+++ b/docs/books/in_epistulam_ad_romanos/13-05.mdx
@@ -1,5 +1,5 @@
 ---
-title: in_epistulam_ad_romanos 13, 05
+title: In espitulam ad Romanos 13, 05
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/in_epistulam_ad_romanos/translated_chapter_13_section_5.md.json'
