--- a/docs/books/in_epistulam_ad_romanos/14-00.mdx
+++ b/docs/books/in_epistulam_ad_romanos/14-00.mdx
@@ -1,5 +1,5 @@
 ---
-title: in_epistulam_ad_romanos 14, 00
+title: In espitulam ad Romanos 14, 00
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/in_epistulam_ad_romanos/translated_chapter_14_section_0.md.json'
