--- a/docs/books/in_epistulam_ad_romanos/16-03.mdx
+++ b/docs/books/in_epistulam_ad_romanos/16-03.mdx
@@ -1,5 +1,5 @@
 ---
-title: in_epistulam_ad_romanos 16, 03
+title: In espitulam ad Romanos 16, 03
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/in_epistulam_ad_romanos/translated_chapter_16_section_3.md.json'
