--- a/docs/books/in_epistulam_ad_romanos/18-06.mdx
+++ b/docs/books/in_epistulam_ad_romanos/18-06.mdx
@@ -1,5 +1,5 @@
 ---
-title: in_epistulam_ad_romanos 18, 06
+title: In espitulam ad Romanos 18, 06
 ---
 import Book from '@site/src/components/books/bookTest.js'
 import Content from '@site/src/databases/books/in_epistulam_ad_romanos/translated_chapter_18_section_6.md.json'
