Refactor calendar components and remove outdated files; add new MonthCalendar and DayForm components

--- a/docs/bible/index.mdx
+++ b/docs/bible/index.mdx
@@ -4,4 +4,13 @@ title: Versículos bíblicos
 
 import App from '@site/src/components/bible/App';
 
+Revisa versículos de diferentes traducciones de la Biblia a la par con la correspondiente versión original en griego o hebreo.
+Contiene un diccionario para los textos griegos y hebreos (pero la definiciones están en inglés). No incluye diccionario para textos de la versión de los LXX.
+
+:::info
+Esta herramienta posee varios "bugs". Por ejemplo:
+- A veces hay dificultades en cambiar de idioma o traducción.
+- El diccionario no te deja elegir más de una palabra por versículo.
+:::
+
 <App />
