--- a/docs/calendars/2025-03.mdx
+++ b/docs/calendars/2025-03.mdx
@@ -2,7 +2,7 @@
 title: Marzo 2025
 ---
 
-import App from '@site/src/components/calendar/App';
-import DAY_DATA_TRANSLATION from '@site/src/databases/calendars/2025-03.json';
+import MonthCalendar from '@site/src/components/calendar/MonthCalendar';
+import DayData from '@site/src/databases/calendars/2025-03.json';
 
-<App MONTH='03' YEAR='2025' DAY_DATA_TRANSLATION={DAY_DATA_TRANSLATION} />
+<MonthCalendar MONTH='02' YEAR='2025' DayData={DayData} />
