--- a/docs/books/efren_de_siria/himno_01.mdx
+++ b/docs/books/efren_de_siria/himno_01.mdx
@@ -10,4 +10,6 @@ import Book from '@site/src/components/books/ephremHymns.js'
 ## Sobre el Ayuno
 _San Efrén el Sirio_
 
+Fuente: [Des heiligen Ephraem des Syrers Hymnen De Ieiunio](https://archive.org/details/desheiligenephra0246ephr_m9s6/page/n13/mode/2up)
+
 <Book data={Content} />
